fixed junit tests